--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,23 @@
+amqp==2.1.4
 appdirs==1.4.3
 beautifulsoup4==4.5.3
+billiard==3.5.0.2
+celery==4.0.2
 chardet==2.3.0
 Django==1.10
+django-celery-beat==1.0.1
+django-celery-results==1.0.1
 django-extensions==1.7.7
 django-newsletter==0.6
 django-tinymce==2.6.0
 django-webtest==1.9.1
 djangorestframework==3.6.2
-ldif3==3.1.1
+elasticsearch==5.3.0
+elasticsearch-dsl==5.2.0
+facebook-sdk==2.0.0
+kombu==4.0.2
+ldif3==3.2.2
+nltk==3.2.2
 olefile==0.44
 packaging==16.8
 Pillow==4.0.0
@@ -15,10 +25,14 @@ psycopg2==2.7.1
 pyparsing==2.2.0
 python-card-me==0.9.3
 python-dateutil==2.6.0
+pytz==2017.2
+requests==2.13.0
 six==1.10.0
 sorl-thumbnail==12.4a1
 surlex==0.2.0
 unicodecsv==0.14.1
+urllib3==1.21
+vine==1.1.3
 waitress==1.0.2
 WebOb==1.7.2
 WebTest==2.0.27
