--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 amqp==2.1.4
+anyjson==0.3.3
 appdirs==1.4.3
 beautifulsoup4==4.5.3
 billiard==3.5.0.2
@@ -8,13 +9,14 @@ Django==1.10
 django-celery-beat==1.0.1
 django-celery-results==1.0.1
 django-extensions==1.7.7
+django-ipware==1.1.6
 django-newsletter==0.6
 django-tinymce==2.6.0
 django-webtest==1.9.1
 djangorestframework==3.6.2
 elasticsearch==5.3.0
 elasticsearch-dsl==5.2.0
-facebook-sdk==2.0.0
+-e git+https://github.com/mobolic/facebook-sdk.git#egg=facebook-sdk
 kombu==4.0.2
 ldif3==3.2.2
 nltk==3.2.2
