--- a/requirements.txt
+++ b/requirements.txt
@@ -16,14 +16,20 @@ django-webtest==1.9.1
 djangorestframework==3.6.2
 elasticsearch==5.3.0
 elasticsearch-dsl==5.2.0
--e git+https://github.com/mobolic/facebook-sdk.git#egg=facebook-sdk
+-e git+https://github.com/mobolic/facebook-sdk.git@cbbe56f00ae7cb838f5dd5e1ca46671a6ec7b0a2#egg=facebook_sdk
+futures==3.1.1
 kombu==4.0.2
 ldif3==3.2.2
+Morfessor==2.0.2a4
 nltk==3.2.2
+numpy==1.12.1
 olefile==0.44
 packaging==16.8
 Pillow==4.0.0
+polyglot==16.7.4
 psycopg2==2.7.1
+pycld2==0.31
+PyICU==1.9.7
 pyparsing==2.2.0
 python-card-me==0.9.3
 python-dateutil==2.6.0
