--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ django-newsletter==0.6
 django-tinymce==2.6.0
 django-webtest==1.9.1
 djangorestframework==3.6.2
+djoser==0.6.0
 elasticsearch==5.3.0
 elasticsearch-dsl==5.2.0
 -e git+https://github.com/mobolic/facebook-sdk.git@cbbe56f00ae7cb838f5dd5e1ca46671a6ec7b0a2#egg=facebook_sdk
