--- a/requirements.txt
+++ b/requirements.txt
@@ -6,23 +6,28 @@ billiard==3.5.0.2
 celery==4.0.2
 chardet==2.3.0
 Django==1.10
-django-allauth=0.32.0
+django-allauth==0.33.0
 django-celery-beat==1.0.1
 django-celery-results==1.0.1
 django-extensions==1.7.7
 django-ipware==1.1.6
-django-tinymce==2.6.0
+django-naomi==0.8
+django-render-block==0.5
+django-templated-email==2.2.0
 django-webtest==1.9.1
 djangorestframework==3.6.2
+djoser==0.6.0
 elasticsearch==5.3.0
 elasticsearch-dsl==5.2.0
 -e git+https://github.com/mobolic/facebook-sdk.git@cbbe56f00ae7cb838f5dd5e1ca46671a6ec7b0a2#egg=facebook_sdk
 futures==3.1.1
+html2text==2016.9.19
 kombu==4.0.2
 ldif3==3.2.2
 Morfessor==2.0.2a4
 nltk==3.2.2
 numpy==1.12.1
+oauthlib==2.0.2
 olefile==0.44
 packaging==16.8
 Pillow==4.0.0
@@ -33,8 +38,10 @@ PyICU==1.9.7
 pyparsing==2.2.0
 python-card-me==0.9.3
 python-dateutil==2.6.0
+python-openid==2.2.5
 pytz==2017.2
 requests==2.13.0
+requests-oauthlib==0.8.0
 six==1.10.0
 sorl-thumbnail==12.4a1
 surlex==0.2.0
